--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "eslint": "^8.0.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^9.0.0",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.5.6",
     "prettier": "^3.0.0",
     "sass": "^1.79.4",
