feat(auth): add JWT auth, registration view, security hardening docs
- Add Login/Register pages
- Implement authService & authStore
- Remove Basic auth fallback from services
- Add password strength & honeypot
- Add WordPress MU plugin registration endpoint docs
- Update board & stores for ordering and secure headers

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
 node_modules
+# Build artifacts
+/dist
+# Logs
+npm-debug.log*
+yarn-error.log*
+# Local env
+.env
+.env.local
+# Mac files
+.DS_Store
+# Editor
+.vscode/
+.idea/
+# Coverage
+coverage/
+
